--- a/coffee-shop/assets/css/main.css
+++ b/coffee-shop/assets/css/main.css
@@ -51,6 +51,14 @@ a:hover,a.active {
 
 /* header rules */
 
+.header {
+    position: sticky;
+    width: 100%;
+    top:0;
+    z-index: 1000;
+    background-color: var(--bg-color);
+}
+
 .header-top {
     display: flex;
     justify-content: space-between;
@@ -247,6 +255,254 @@ a:hover,a.active {
 
 /* banner section */
 
+/* product section */
+
+.h-title {
+    font-weight: 900;
+    font-size: 40px;
+    color: var(--text-color);
+    text-transform: uppercase;
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+.product-card {
+    background-color: var(--card-bg-color);
+    border-radius: 10px;
+    margin-bottom: 21px;
+    cursor: pointer;
+    transition: background-color .3s;
+    padding: 20px;
+}
+
+.product-card:hover {
+    background-color: var(--card-bg-hover-color);
+}
+
+.product-card-img {
+    text-align: center;
+    margin-bottom: 42px;
+}
+
+.product-card-img img{
+    width: 97px;
+    height: 199px;
+}
+
+.product-card-content h3{
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.product-card-content h3 a{
+    height: 60px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.product-card-details {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+}
+
+.product-price span {
+    font-weight: 400;
+}
+
+.product-price small {
+    font-weight: 400;
+    text-decoration: line-through;
+    font-size: 14px;
+    color: #818181;
+}
+
+.product-actions {
+    font-size: 25px;
+}
+
+/* product section */
+
+
+/* news section */
+
+.card {
+    background-color: var(--card-bg-color);
+}
+
+.card img{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.card-title {
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: var(--text-color);
+    margin-bottom: 15px;
+}
+
+.card-text {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--paragraph-color);
+    height: 120px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+}
+
+/* news section */
+
+
+/* footer */
+.footer {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    border-top: 2px solid var(--card-bg-color);
+}
+
+.footer-logo img {
+    max-width: 80px;
+}
+
+.footer-logo span {
+    font-size: 20px;
+    font-weight: 900;
+    color: #F8DABF;
+    text-transform: uppercase;
+    transition: all .3s ease;
+}
+
+.footer-logo span:hover {
+    color: var(--accent-color);
+}
+
+.footer-menu {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.footer-menu li {
+    margin-bottom: 20px;
+}
+
+/* footer */
+
+/* product page */
+
+.product-page {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.product-page-actions {
+    background-color: var(--card-bg-color);
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.product-page h1{
+    font-weight: 900;
+    font-size: 60px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+.product-image {
+    background-color: var(--card-bg-color);
+    text-align: center;
+    border-radius: 10px;
+    padding: 60px;
+    margin-bottom: 20px;
+}
+
+.product-variations ul {
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+    gap: 0 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.product-variations a {
+    color: var(--text-color);
+    font-weight: 700;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: 2px solid var(--text-color);
+    font-size: 22px;
+    line-height: 48px;
+    transition: all .3s ease;
+}
+
+.product-variations a.active,.product-variations a:hover  {
+    color: var(--accent-color);
+    border-color: var(--accent-color);
+    background-color: transparent;
+}
+
+.product-page-actions span{
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.add2cart-btn {
+    color: var(--text-color);
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 10px;
+    text-align: center;
+    width: 100%;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    text-transform: uppercase;
+    transition: all .4s ease-in-out;
+    background-color: var(--accent-color);
+    border-color: transparent;
+}
+
+.add2cart-btn:hover{
+    background-color: #b67d45;
+    border-color: transparent;
+}
+
+.product-description {
+    margin-top: 60px;
+}
+
+.product-description h3{
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin-bottom: 30px;
+}
+
+.product-description-content {
+    background-color: var(--card-bg-color);
+    border-radius: 10px;
+    padding: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 80px;
+    color: var(--paragraph-color);
+}
+
+.product-description-content ul{
+    padding-left: 20px;
+}
+
+/* product pag */
+
 /* media rules */
 
 @media (min-width: 992px) {
@@ -334,6 +590,32 @@ a:hover,a.active {
     .banner-section {
         margin-bottom: 70px;
         margin-top: 70px;
+    }
+
+    .footer-menu-last {
+        text-align: right;
+    }
+
+    .footer-logo-inner {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .product-description-content {
+        margin-bottom: 0;
+    }
+
+    .product-page {
+        padding-bottom: 40px;
+    }
+
+    .footer {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .new-section {
+        margin-bottom: 40px;
     }
 
 }
