--- a/coffee-shop/assets/css/main.css
+++ b/coffee-shop/assets/css/main.css
@@ -344,6 +344,10 @@ a:hover,a.active {
 
 /* news section */
 
+.new-section {
+    margin-bottom: 60px;
+}
+
 .card {
     background-color: var(--card-bg-color);
 }
@@ -420,7 +424,7 @@ a:hover,a.active {
 .product-page-actions {
     background-color: var(--card-bg-color);
     border-radius: 10px;
-    padding: 30px;
+    padding: 20px;
 }
 
 .product-page h1{
@@ -617,6 +621,131 @@ a:hover,a.active {
 
 /* minicart styles */
 
+/* cart page */
+
+.cart-page-checkout {
+    background-color: var(--card-bg-color);
+    text-align: center;
+    border-radius: 10px;
+    padding: 20px 0 20px 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-product-row {
+    background-color: var(--card-bg-hover-color);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    position: relative;
+    width: 100%;
+    align-items: center;
+}
+
+.cart-product-row img{
+    max-height: 120px;
+    margin-right: 20px;
+}
+
+.cart-product-info p{
+    margin-bottom: 5px;
+}
+
+.cart-qty {
+    display: flex;
+    align-items: center;
+}
+
+.cart-name {
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.cart-variation {
+    font-size: 18px;
+    font-weight: 700;
+    color: #818181;
+}
+
+.cart-input {
+    border-radius: 5px;
+    border-color: #FFF;
+    max-width: 100px;
+    max-height: 55px;
+    background-color: transparent;
+    padding-left: 10px;
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--text-color);
+}
+
+.cart-variations ul {
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+    gap: 0 10px;
+}
+
+.cart-variations a {
+    color: var(--text-color);
+    font-weight: 700;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: 2px solid var(--text-color);
+    font-size: 22px;
+    line-height: 48px;
+    transition: all .3s ease;
+}
+
+.cart-variations a.active,.cart-variations a:hover {
+    color: var(--accent-color);
+    border-color: var(--accent-color);
+    background-color: transparent;
+}
+
+.cart-delete-product {
+    font-size: 28px;
+    padding: 20px;
+    color: #818181;
+}
+
+.cart-qty span{
+    margin-left: 10px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.cart-summary-title{
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    position: relative;
+    color: var(--text-color);
+}
+
+.cart-summary-title span {
+    padding-right: 1rem;
+    position: relative;
+    z-index: 1;
+    background-color: var(--card-bg-color);
+}
+
+.cart-summary-title::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    top: 50%;
+    left: 0;
+    border-top: 2px dashed var(--text-color);
+
+}
+
+/* cart page */
+
 /* media rules */
 
 @media (min-width: 992px) {
@@ -679,6 +808,36 @@ a:hover,a.active {
     .product-name {
         font-size: 15px;
     }
+
+    .cart-page-checkout {
+        display: block;
+        padding: 5px;
+    }
+
+    .cart-delete-product {
+        font-size: 20px;
+    }
+
+}
+
+@media (max-width: 500px) {
+    .cart-variations a {
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+        border: 1px solid var(--text-color);
+        font-size: 14px;
+        line-height: 30px;
+        transition: all .3s ease;
+    }
+    .cart-variations ul {
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .cart-name {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -733,8 +892,12 @@ a:hover,a.active {
         padding-bottom: 40px;
     }
 
-    .new-section {
-        margin-bottom: 40px;
+    .cart-page-chekout {
+        padding: 10px;
+    }
+
+    .cart-delete-product {
+        padding: 10px;
     }
 
 }
