--- a/positivus/styles/_media.scss
+++ b/positivus/styles/_media.scss
@@ -7,6 +7,9 @@ $tablet: rem(1023);
 $mobile-above: rem(768);
 $mobile: rem(767);
 
+$mobile-s-above: rem(481);
+$mobile-s: rem(480);
+
 @mixin desktop-above {
     @media (min-width: $desktop-above){
         @content;
@@ -39,6 +42,18 @@ $mobile: rem(767);
 
 @mixin mobile {
     @media (max-width: $mobile){
+        @content;
+    }
+}
+
+@mixin mobile-s-above {
+    @media (min-width: $mobile-s-above){
+        @content;
+    }
+}
+
+@mixin mobile-s {
+    @media (max-width: $mobile-s){
         @content;
     }
 }
