--- a/positivus/styles/_variables.scss
+++ b/positivus/styles/_variables.scss
@@ -1,11 +1,11 @@
 :root {
-    --color-accent: #B9FF66;
     --color-dark: #191A23;
     --color-dark-alt: #292A32;
-    --color-grey: #F3F3F3;
-    --color-grey-alt: #898989;
     --color-light: #FFFFFF;
-    
+    --color-accent: #B9FF66;
+    --color-gray: #F3F3F3;
+    --color-gray-alt: #898989;
+
     --border: 1px solid var(--color-dark);
     --border-radius: 14px;
     --border-radius-small: 7px;
@@ -23,6 +23,15 @@
     --input-height: 59px;
     --button-height: 68px;
 
-    --transition-duration: 0.2sж
+    --transition-duration: 0.2s;
 
+    @include desktop {
+        --section-padding-y: 50px;
+    }
+
+    @include mobile {
+        --section-padding-y: 30px;
+    }
+
+    
 }
