--- a/positivus/styles/styles.css
+++ b/positivus/styles/styles.css
@@ -150,13 +150,27 @@ svg * {
     scroll-behavior: auto !important;
   }
 }
+@font-face {
+  font-family: "Space Grotesk";
+  src: url(../fonts/SpaceGrotesk-Regular.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Space Grotesk";
+  src: url(../fonts/SpaceGrotesk-Medium.woff2) format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
 :root {
-  --color-accent: #B9FF66;
   --color-dark: #191A23;
   --color-dark-alt: #292A32;
-  --color-grey: #F3F3F3;
-  --color-grey-alt: #898989;
   --color-light: #FFFFFF;
+  --color-accent: #B9FF66;
+  --color-gray: #F3F3F3;
+  --color-gray-alt: #898989;
   --border: 1px solid var(--color-dark);
   --border-radius: 14px;
   --border-radius-small: 7px;
@@ -168,7 +182,17 @@ svg * {
   --section-padding-y: 70px;
   --input-height: 59px;
   --button-height: 68px;
-  --transition-duration: 0.2sж ;
+  --transition-duration: 0.2s;
+}
+@media (max-width: 80rem) {
+  :root {
+    --section-padding-y: 50px;
+  }
+}
+@media (max-width: 47.9375rem) {
+  :root {
+    --section-padding-y: 30px;
+  }
 }
 
 .container {
@@ -185,9 +209,9 @@ svg * {
   border: 0 !important;
   padding: 0 !important;
   white-space: nowrap !important;
-  -webkit-clip-path: inset(0 0 0 0) !important;
-          clip-path: inset(0 0 0 0) !important;
-  clip: rect(0, 0, 0, 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+          clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
   overflow: hidden !important;
 }
 
@@ -203,20 +227,6 @@ svg * {
   }
 }
 
-@font-face {
-  font-family: "Space Grotesk";
-  src: url(../fonts/SpaceGrotesk-Regular.woff2) format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Space Grotesk";
-  src: url(../fonts/SpaceGrotesk-Medium.woff2) format("woff2");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
 body {
   font-size: clamp(16px, 1.25vw, 18px);
   font-family: var(--font-family-base);
@@ -253,4 +263,594 @@ h3 {
 
 h4 {
   font-size: clamp(18px, 1.3888888889vw, 20px);
+}
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: var(--button-height);
+  padding-inline: 2.5rem;
+  font-size: 1.25rem;
+  color: var(--color-light);
+  background-color: var(--color-dark);
+  border: var(--border);
+  border-radius: var(--border-radius);
+}
+@media (hover: hover) {
+  .button:hover {
+    color: var(--color-dark);
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .button:active {
+    color: var(--color-dark);
+    background-color: var(--color-accent);
+  }
+}
+.button--transparent {
+  color: var(--color-dark);
+  background-color: transparent;
+}
+
+.grid {
+  --gridColumns: 1;
+  display: grid;
+  grid-template-columns: repeat(var(--gridColumns), 1fr);
+  gap: 2.5rem;
+}
+.grid--2 {
+  --gridColumns: 2;
+}
+.grid--3 {
+  --gridColumns: 3;
+}
+.grid--4 {
+  --gridColumns: 4;
+}
+.grid--5 {
+  --gridColumns: 5;
+}
+.grid--6 {
+  --gridColumns: 6;
+}
+.grid--7 {
+  --gridColumns: 7;
+}
+.grid--8 {
+  --gridColumns: 8;
+}
+.grid--9 {
+  --gridColumns: 9;
+}
+.grid--10 {
+  --gridColumns: 10;
+}
+.grid--11 {
+  --gridColumns: 11;
+}
+.grid--12 {
+  --gridColumns: 12;
+}
+@media (max-width: 47.9375rem) {
+  .grid {
+    gap: 1.875rem;
+  }
+}
+@media (max-width: 63.9375rem) {
+  .grid--2 {
+    --gridColumns: 1;
+  }
+}
+
+.burger-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 3rem;
+  aspect-ratio: 1;
+  position: relative;
+  border-radius: var(--border-radius-small);
+}
+@media (hover: hover) {
+  .burger-button:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .burger-button:active {
+    background-color: var(--color-accent);
+  }
+}
+.burger-button::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  width: 50%;
+  height: 0.125rem;
+  background-color: var(--color-dark);
+  border-radius: 0.3125rem;
+  box-shadow: 0 -0.5rem, 0 0.5rem;
+}
+
+.mobile-overlay {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: none;
+  padding: 0.875rem 1.25rem;
+}
+.mobile-overlay:modal {
+  max-width: 100%;
+  max-height: 100%;
+}
+.mobile-overlay__close-button-wrapper {
+  display: flex;
+  justify-self: end;
+}
+.mobile-overlay__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1.875rem;
+  min-height: 80vh;
+}
+
+.cross-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 3rem;
+  aspect-ratio: 1;
+  position: relative;
+  border-radius: var(--border-radius-small);
+}
+@media (hover: hover) {
+  .cross-button:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .cross-button:active {
+    background-color: var(--color-accent);
+  }
+}
+.cross-button::after, .cross-button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 7px;
+  width: 75%;
+  height: 0.125rem;
+  background-color: var(--color-dark);
+  border-radius: 0.3125rem;
+}
+.cross-button::before {
+  rotate: 45deg;
+}
+.cross-button::after {
+  rotate: -45deg;
+}
+
+.section {
+  padding-block: var(--section-padding-y);
+}
+.section--hidden-x {
+  overflow-x: hidden;
+}
+.section__header {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+@media (max-width: 47.9375rem) {
+  .section__header {
+    flex-direction: column;
+    row-gap: 1.875rem;
+    text-align: center;
+  }
+}
+.section__header:not(:last-child) {
+  margin-bottom: 5.3125rem;
+}
+@media (max-width: 47.9375rem) {
+  .section__header:not(:last-child) {
+    margin-bottom: 2.5rem;
+  }
+}
+.section__description {
+  max-width: 36.25rem;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--section-padding-y);
+}
+@media (max-width: 80rem) {
+  .hero {
+    row-gap: 3.75rem;
+  }
+}
+.hero__main {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  -moz-column-gap: 1.875rem;
+       column-gap: 1.875rem;
+}
+@media (max-width: 47.9375rem) {
+  .hero__main {
+    flex-direction: column;
+  }
+}
+.hero__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  max-width: 33.1875rem;
+  row-gap: 2.1875rem;
+}
+@media (max-width: 47.9375rem) {
+  .hero__body {
+    display: contents;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .hero__title {
+    order: -2;
+    margin-bottom: 0.625rem;
+  }
+}
+.hero__description {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+@media (max-width: 47.9375rem) {
+  .hero__description {
+    margin-bottom: 2.5rem;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .hero__button {
+    margin-bottom: 3.75rem;
+    width: 100%;
+    max-width: 24.375rem;
+    margin-inline: auto;
+  }
+}
+.hero__partners-list {
+  display: flex;
+  justify-content: space-between;
+  -moz-column-gap: 2.3125rem;
+       column-gap: 2.3125rem;
+}
+@media (max-width: 63.9375rem) {
+  .hero__partners-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 1.25rem;
+  }
+}
+@media (max-width: 30rem) {
+  .hero__partners-list {
+    -moz-column-gap: 0;
+         column-gap: 0;
+    --heroPartnersWidthOffsetX: 60px;
+    width: calc(100vw + var(--heroPartnersWidthOffsetX) * 2);
+    margin-left: calc((var(--heroPartnersWidthOffsetX) + var(--container-padding-x)) * -1);
+  }
+}
+@media (max-width: 63.9375rem) {
+  .hero__partners-item {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 30rem) {
+  .hero__partners-item {
+    justify-content: start;
+  }
+  .hero__partners-item:nth-child(-n+3) {
+    justify-content: end;
+  }
+}
+.hero__partners-img {
+  filter: grayscale(1);
+}
+@media (max-width: 63.9375rem) {
+  .hero__image {
+    max-width: 40%;
+    height: auto;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .hero__image {
+    order: -1;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1.25rem;
+  }
+}
+
+.puddle-bg {
+  padding-inline: 0.4375rem;
+  background-color: var(--color-accent);
+  border-radius: var(--border-radius-small);
+  font-weight: 500;
+}
+.puddle-bg--light {
+  background-color: var(--color-light);
+}
+
+.services__list:not(:last-child) {
+  margin-bottom: 6.25rem;
+}
+@media (max-width: 47.9375rem) {
+  .services__list:not(:last-child) {
+    margin-bottom: 4.375rem;
+  }
+}
+
+.services-card {
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+  border: var(--border);
+  display: flex;
+  justify-content: space-between;
+  -moz-column-gap: 1.875rem;
+       column-gap: 1.875rem;
+  padding: 3.125rem;
+  min-height: 19.375rem;
+  box-shadow: var(--shadow);
+}
+@media (max-width: 47.9375rem) {
+  .services-card {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1.6875rem;
+  }
+}
+.services-card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 1.875rem;
+}
+@media (max-width: 47.9375rem) {
+  .services-card__body {
+    display: contents;
+  }
+}
+.services-card__title {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+@media (max-width: 47.9375rem) {
+  .services-card__title {
+    grid-column: -1/1;
+  }
+}
+.services-card__image {
+  align-self: center;
+}
+@media (max-width: 80rem) {
+  .services-card__image {
+    max-width: 50%;
+    height: auto;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .services-card__image {
+    max-width: 10.3125rem;
+  }
+}
+.services-card__link {
+  --serviceCardLinkIconColor: var(--color-accent);
+  display: inline-flex;
+  align-items: center;
+  -moz-column-gap: 0.9375rem;
+       column-gap: 0.9375rem;
+  font-size: 1.25rem;
+}
+@media (hover: hover) {
+  .services-card__link:hover {
+    opacity: 0.7;
+  }
+}
+@media (hover: none) {
+  .services-card__link:active {
+    opacity: 0.7;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .services-card__link {
+    align-self: end;
+  }
+}
+.services-card__link--light {
+  --serviceCardLinkIconColor: var(--color-dark);
+  color: var(--color-light);
+}
+.services-card__link-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 41px;
+  aspect-ratio: 1;
+  background-color: currentColor;
+  border-radius: 50%;
+}
+.services-card__link-icon-wrapper svg {
+  color: var(--serviceCardLinkIconColor);
+}
+@media (max-width: 47.9375rem) {
+  .services-card__link-label {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    margin: -1px !important;
+    border: 0 !important;
+    padding: 0 !important;
+    white-space: nowrap !important;
+    -webkit-clip-path: inset(100%) !important;
+            clip-path: inset(100%) !important;
+    clip: rect(0 0 0 0) !important;
+    overflow: hidden !important;
+  }
+}
+.services-card--accent-bg {
+  background-color: var(--color-accent);
+}
+.services-card--dark-bg {
+  background-color: var(--color-dark);
+}
+
+.banner {
+  --bannerImageOffsetY: 24px;
+  padding-block: var(--bannerImageOffsetY);
+}
+@media (max-width: 63.9375rem) {
+  .banner {
+    --bannerImageOffsetY: 0px;
+  }
+}
+.banner__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+}
+.banner__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 1.625rem;
+  padding: 3.75rem;
+}
+@media (max-width: 63.9375rem) {
+  .banner__body {
+    padding: 3.125rem;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .banner__body {
+    row-gap: 1.25rem;
+  }
+}
+.banner__description {
+  max-width: 31.25rem;
+}
+.banner__image {
+  margin-block: calc(var(--bannerImageOffsetY) * -1);
+}
+@media (max-width: 63.9375rem) {
+  .banner__image {
+    max-width: 40%;
+    height: auto;
+  }
+}
+
+.header {
+  padding-top: 3.75rem;
+}
+@media (max-width: 80rem) {
+  .header {
+    padding-top: 1.875rem;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .header {
+    padding-top: 0.9375rem;
+  }
+}
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+@media (max-width: 63.9375rem) {
+  .header__inner {
+    -moz-column-gap: 1.875rem;
+         column-gap: 1.875rem;
+  }
+}
+@media (max-width: 63.9375rem) {
+  .header__logo {
+    max-width: 7.5rem;
+  }
+}
+@media (max-width: 47.9375rem) {
+  .header__logo {
+    max-width: 9rem;
+  }
+}
+.header__menu {
+  margin-left: auto;
+  font-size: 1.25rem;
+}
+@media (max-width: 80rem) {
+  .header__menu {
+    font-size: 1.125rem;
+  }
+}
+@media (max-width: 63.9375rem) {
+  .header__menu {
+    font-size: 1rem;
+  }
+}
+.header__menu-list {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+@media (max-width: 80rem) {
+  .header__menu-list {
+    -moz-column-gap: 1.25rem;
+         column-gap: 1.25rem;
+  }
+}
+.header__menu-link {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  height: 3rem;
+}
+@media (hover: hover) {
+  .header__menu-link:hover::after {
+    width: 100%;
+  }
+}
+@media (hover: none) {
+  .header__menu-link:active::after {
+    width: 100%;
+  }
+}
+.header__menu-link::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  translate: -50%;
+  width: 0;
+  height: 0.125rem;
+  background-color: currentColor;
+  transition-duration: inherit;
+}
+@media (max-width: 63.9375rem) {
+  .header__button {
+    height: 3rem;
+    font-size: 1rem;
+    padding-inline: 1.125rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
