--- a/positivus/styles/styles.scss
+++ b/positivus/styles/styles.scss
@@ -19,4 +19,6 @@
     'blocks/services',
     'blocks/services-card',
     'blocks/banner',
+    'blocks/studies',
+    'blocks/process',
     'blocks/header';
