add owlcarousel + section team

--- a/positivus/styles/styles.scss
+++ b/positivus/styles/styles.scss
@@ -21,4 +21,6 @@
     'blocks/banner',
     'blocks/studies',
     'blocks/process',
+    'blocks/team',
+    'blocks/team-card',
     'blocks/header';
