--- a/positivus/styles/styles.scss
+++ b/positivus/styles/styles.scss
@@ -23,4 +23,7 @@
     'blocks/process',
     'blocks/team',
     'blocks/team-card',
+    'blocks/pagination',
+    'blocks/reviews',
+    'blocks/review-card',
     'blocks/header';
