--- a/positivus/styles/styles.css
+++ b/positivus/styles/styles.css
@@ -1063,6 +1063,127 @@ h4, .h4 {
   }
 }
 
+.pagination__list {
+  display: flex;
+}
+.pagination__button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  aspect-ratio: 1;
+  color: var(--color-light);
+}
+.pagination__button.is-current {
+  color: var(--color-accent);
+}
+
+.reviews {
+  display: flex;
+  flex-direction: column;
+  row-gap: 7.75rem;
+  padding-top: 5.25rem;
+  padding-bottom: 4.25rem;
+  color: var(--color-light);
+  background-color: var(--color-dark);
+  border-radius: var(--border-radius-large);
+  padding: 1.25rem;
+}
+@media (max-width: 63.9375rem) {
+  .reviews {
+    row-gap: 3.75rem;
+  }
+}
+.reviews__actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 35.25rem;
+  margin-inline: auto;
+}
+.reviews__arrow-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  aspect-ratio: 1;
+  color: var(--color-light);
+}
+@media (hover: hover) {
+  .reviews__arrow-button:hover {
+    color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .reviews__arrow-button:active {
+    color: var(--color-accent);
+  }
+}
+.reviews__arrow-button svg {
+  width: 20px;
+  aspect-ratio: 1;
+}
+.reviews__arrow-button--rotate {
+  rotate: 180deg;
+}
+.reviews__pagination-list {
+  display: flex;
+}
+@media (min-width: 48rem) {
+  .reviews__pagination-item:last-child {
+    display: none;
+  }
+}
+
+.review-card {
+  --reviewCardCornerWidth: 40px;
+  --reviewCardCornerOffsetLeft: 52px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+}
+.review-card__body {
+  position: relative;
+  padding: 3rem var(--reviewCardCornerWidth) 3.25rem;
+  border: 1px solid var(--color-accent);
+  border-radius: var(--border-radius-large);
+}
+.review-card__body::after {
+  width: var(--reviewCardCornerWidth);
+  aspect-ratio: 1;
+  position: absolute;
+  content: "";
+  border: inherit;
+  background-color: var(--color-dark);
+  rotate: 45deg;
+  top: 100%;
+  left: var(--reviewCardCornerOffsetLeft);
+  clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  translate: 0 -50%;
+}
+.review-card__footer {
+  display: flex;
+  flex-direction: column;
+  padding-left: calc(var(--reviewCardCornerOffsetLeft) + var(--reviewCardCornerWidth) / 2);
+}
+.review-card__name {
+  font-size: 1.25rem;
+  color: var(--color-accent);
+  font-style: normal;
+}
+.review-card__company {
+  font-size: 1.125rem;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .header {
   padding-top: 3.75rem;
 }
