--- a/positivus/styles/blocks/_button.scss
+++ b/positivus/styles/blocks/_button.scss
@@ -19,4 +19,8 @@
         color: var(--color-dark);
         background-color: transparent;
     }
+
+    &--accent {
+        background-color: var(--color-accent);
+    }
 }
