--- a/positivus/styles/styles.scss
+++ b/positivus/styles/styles.scss
@@ -26,4 +26,11 @@
     'blocks/pagination',
     'blocks/reviews',
     'blocks/review-card',
+    'blocks/contact-us',
+    'blocks/field',
+    'blocks/radios',
+    'blocks/radio',
+    'blocks/_soc1als',
+    'blocks/_footer',
+    'blocks/_subscribe-form',
     'blocks/header';
