--- a/positivus/styles/blocks/_reviews.scss
+++ b/positivus/styles/blocks/_reviews.scss
@@ -2,15 +2,17 @@
     display: flex;
     flex-direction: column;
     row-gap: rem(124);
-    padding-top: rem(84);
-    padding-bottom: rem(68);
     color: var(--color-light);
     background-color: var(--color-dark);
     border-radius: var(--border-radius-large);
-    padding: rem(20);
+    padding: rem(84) rem(30) rem(64) rem(30);
 
-    @include tablet {
+    @include desktop {
         row-gap: rem(60);
+    }
+
+    @include mobile {
+        padding: rem(30) rem(30) rem(32) rem(30);
     }
 
     &__actions {
